force-app/main/default/objects/Contact/fields/Office_Floor__c.field-meta.xml
<CustomField>
    <fullName>Office_Floor__c</fullName>
    <label>Office Floor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>