force-app/main/default/objects/Contact/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <formula>Account.Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office Location</label>
    <type>Text</type>
</CustomField>