force-app/main/default/objects/Contact/fields/ORIX_STAFFID__c.field-meta.xml
<CustomField>
    <fullName>ORIX_STAFFID__c</fullName>
    <label>ORIX STAFFID</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>