force-app/main/default/objects/Contact/fields/Other_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone_2__c</fullName>
    <label>Other Phone 2</label>
    <type>Phone</type>
</CustomField>