force-app/main/default/objects/Contact/fields/Other_Phone_3__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone_3__c</fullName>
    <label>Other Phone 3</label>
    <type>Phone</type>
</CustomField>