force-app/main/default/objects/Contact/fields/OtherCountry_Old__c.field-meta.xml
<CustomField>
    <fullName>OtherCountry_Old__c</fullName>
    <description>Other Country before picklist turned on</description>
    <label>OtherCountry_Old</label>
    <length>40</length>
    <type>Text</type>
</CustomField>