force-app/main/default/objects/Contact/fields/OtherState_Old__c.field-meta.xml
<CustomField>
    <fullName>OtherState_Old__c</fullName>
    <description>Data before turning country/state picklist on</description>
    <label>OtherState_Old</label>
    <length>40</length>
    <type>Text</type>
</CustomField>