force-app/main/default/objects/Contact/fields/Outlook_Dupe__c.field-meta.xml
<CustomField>
    <fullName>Outlook_Dupe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outlook Dupe</label>
    <type>Checkbox</type>
</CustomField>