force-app/main/default/objects/Contact/fields/Outlook_Review__c.field-meta.xml
<CustomField>
    <fullName>Outlook_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked by default for Contacts created from Outlook integration.  Uncheck after data hygiene review.</inlineHelpText>
    <label>Outlook Review</label>
    <type>Checkbox</type>
</CustomField>