force-app/main/default/objects/Contact/fields/Override_Primary_BU__c.field-meta.xml
<CustomField>
    <fullName>Override_Primary_BU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Primary BU</label>
    <type>Checkbox</type>
</CustomField>