force-app/main/default/objects/Contact/fields/Pardot_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opt out in Pardot</description>
    <label>Pardot Opt Out</label>
    <type>Checkbox</type>
</CustomField>