force-app/main/default/objects/Contact/fields/PDC_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>PDC_Last_Modified__c</fullName>
    <description>Populated when Primary PDC or Secondary PDC is changed</description>
    <label>PDC Last Modified</label>
    <type>DateTime</type>
</CustomField>