force-app/main/default/objects/Contact/fields/Photo_Avail__c.field-meta.xml
<CustomField>
    <fullName>Photo_Avail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photo Avail</label>
    <type>Checkbox</type>
</CustomField>