force-app/main/default/objects/Contact/fields/Physical_Office__c.field-meta.xml
<CustomField>
    <fullName>Physical_Office__c</fullName>
    <label>Physical Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>BO</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
            <value>
                <fullName>DB</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>F3</fullName>
            </value>
            <value>
                <fullName>FF</fullName>
            </value>
            <value>
                <fullName>FK</fullName>
            </value>
            <value>
                <fullName>HK</fullName>
            </value>
            <value>
                <fullName>HM</fullName>
            </value>
            <value>
                <fullName>HO</fullName>
            </value>
            <value>
                <fullName>KY</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
            <value>
                <fullName>LE</fullName>
            </value>
            <value>
                <fullName>LO</fullName>
            </value>
            <value>
                <fullName>LS</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>MC</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>ML</fullName>
            </value>
            <value>
                <fullName>MN</fullName>
            </value>
            <value>
                <fullName>MU</fullName>
            </value>
            <value>
                <fullName>NB</fullName>
            </value>
            <value>
                <fullName>NG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>