force-app/main/default/objects/Contact/fields/pi__comments__c.field-meta.xml
<CustomField>
    <fullName>pi__comments__c</fullName>
    <label>Pardot Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>