force-app/main/default/objects/Contact/fields/Pipeline_Filter_Set__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Filter_Set__c</fullName>
    <inlineHelpText>Grants additional Opp/Engmnt Manager filters</inlineHelpText>
    <label>Pipeline Filter Set</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADMIN</fullName>
            </value>
            <value>
                <fullName>INDUSTRY HEAD</fullName>
            </value>
            <value>
                <fullName>STANDARD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>