force-app/main/default/objects/Contact/fields/Preparis_Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Preparis_Access_Level__c</fullName>
    <label>Preparis Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Crisis Leader / Office Manager</fullName>
            </value>
            <value>
                <fullName>Crisis Manager</fullName>
            </value>
            <value>
                <fullName>Crisis Manager / Floor Warden</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Message Only</fullName>
            </value>
            <value>
                <fullName>Program Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>