force-app/main/default/objects/Contact/fields/Preparis_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Preparis_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preparis Opt Out</label>
    <type>Checkbox</type>
</CustomField>