force-app/main/default/objects/Contact/fields/Preparis_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Preparis_Opt_Out_Date__c</fullName>
    <label>Preparis Opt Out Date</label>
    <type>DateTime</type>
</CustomField>