force-app/main/default/objects/Contact/fields/Preparis_Opt_Out_STAFFID__c.field-meta.xml
<CustomField>
    <fullName>Preparis_Opt_Out_STAFFID__c</fullName>
    <label>Preparis Opt Out STAFFID</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>