force-app/main/default/objects/Contact/fields/Preparis_Opt_Out_User__c.field-meta.xml
<CustomField>
    <fullName>Preparis_Opt_Out_User__c</fullName>
    <description>Name of user who checked Preparis Opt Out</description>
    <label>Preparis Opt Out User</label>
    <length>64</length>
    <type>Text</type>
</CustomField>