force-app/main/default/objects/Contact/fields/Preparis_Opt_Out_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Preparis_Opt_Out_User_ID__c</fullName>
    <label>Preparis Opt Out User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>