force-app/main/default/objects/Contact/fields/Press__c.field-meta.xml
<CustomField>
    <fullName>Press__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Press</label>
    <type>Checkbox</type>
</CustomField>