force-app/main/default/objects/Contact/fields/Primary_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business_Unit__c</fullName>
    <label>Primary Business Unit</label>
    <length>16</length>
    <type>Text</type>
</CustomField>