force-app/main/default/objects/Contact/fields/Primary_PDC__c.field-meta.xml
<CustomField>
    <fullName>Primary_PDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary PDC</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only employed HL staff can be PDC</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Houlihan Employee</value>
        </filterItems>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <valueField>Contact.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Primary PDC)</relationshipLabel>
    <relationshipName>PrimaryPDC</relationshipName>
    <type>Lookup</type>
</CustomField>