force-app/main/default/objects/Contact/fields/Product_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Product_Specialty__c</fullName>
    <label>Product Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Valuation Advisory Services</fullName>
            </value>
            <value>
                <fullName>Dispute Resolution</fullName>
            </value>
            <value>
                <fullName>Fund Opinions</fullName>
            </value>
            <value>
                <fullName>Generalist/ Healthcare</fullName>
            </value>
            <value>
                <fullName>Generalist/REVS</fullName>
            </value>
            <value>
                <fullName>Generalist/ TMT</fullName>
            </value>
            <value>
                <fullName>GEN - General</fullName>
            </value>
            <value>
                <fullName>Portfolio Valuation</fullName>
            </value>
            <value>
                <fullName>TAS- Accounting and Financial Reporting Advisory</fullName>
            </value>
            <value>
                <fullName>TAS- Due Diligence-Buyside</fullName>
            </value>
            <value>
                <fullName>TAS- Due Diligence- Sellside</fullName>
            </value>
            <value>
                <fullName>TAS- Lender Services</fullName>
            </value>
            <value>
                <fullName>TAS- TAX</fullName>
            </value>
            <value>
                <fullName>Tech+IP Advisory</fullName>
            </value>
            <value>
                <fullName>Transaction Advisory Services</fullName>
            </value>
            <value>
                <fullName>Transaction Opinions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>