force-app/main/default/objects/Contact/fields/Project_Notify_Role__c.field-meta.xml
<CustomField>
    <fullName>Project_Notify_Role__c</fullName>
    <label>Project Notify Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All WP</fullName>
            </value>
            <value>
                <fullName>AR_AT</fullName>
            </value>
            <value>
                <fullName>AR_BE</fullName>
            </value>
            <value>
                <fullName>AR_CF_BE</fullName>
            </value>
            <value>
                <fullName>AR_CF_HK</fullName>
            </value>
            <value>
                <fullName>AR_CF_TK</fullName>
            </value>
            <value>
                <fullName>AR_CH</fullName>
            </value>
            <value>
                <fullName>AR_DC</fullName>
            </value>
            <value>
                <fullName>AR_FVA_FF</fullName>
            </value>
            <value>
                <fullName>AR_FVA_LO</fullName>
            </value>
            <value>
                <fullName>AR_FVA_PA</fullName>
            </value>
            <value>
                <fullName>AR_FRG_BE</fullName>
            </value>
            <value>
                <fullName>AR_FRG_HK</fullName>
            </value>
            <value>
                <fullName>AR_FRG_TK</fullName>
            </value>
            <value>
                <fullName>AR_HK</fullName>
            </value>
            <value>
                <fullName>AR_SF</fullName>
            </value>
            <value>
                <fullName>AR Opt Out</fullName>
            </value>
            <value>
                <fullName>Billing Coordinator</fullName>
            </value>
            <value>
                <fullName>Case Number Assigned</fullName>
            </value>
            <value>
                <fullName>CF Case Assigned</fullName>
            </value>
            <value>
                <fullName>Conflict Administrator</fullName>
            </value>
            <value>
                <fullName>Conflict Committee</fullName>
            </value>
            <value>
                <fullName>Coverage</fullName>
            </value>
            <value>
                <fullName>Cross-Office Staffing</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Disclose Status - FRG</fullName>
            </value>
            <value>
                <fullName>Exam_Status_CF</fullName>
            </value>
            <value>
                <fullName>Exam_Status_FVA</fullName>
            </value>
            <value>
                <fullName>Exam_Status_FR</fullName>
            </value>
            <value>
                <fullName>FVA POC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>