force-app/main/default/objects/Contact/fields/PTA_Override_Status__c.field-meta.xml
<CustomField>
    <fullName>PTA_Override_Status__c</fullName>
    <label>PTA Override Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monitored</fullName>
            </value>
            <value>
                <fullName>MonitoredUK</fullName>
            </value>
            <value>
                <fullName>Not Monitored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>