force-app/main/default/objects/Contact/fields/Rehire__c.field-meta.xml
<CustomField>
    <fullName>Rehire__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when the employee is rehired</inlineHelpText>
    <label>Rehire</label>
    <type>Checkbox</type>
</CustomField>