force-app/main/default/objects/Contact/fields/Revenue_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Allocation__c</fullName>
    <description>Used to store the revenue allocation assignment when it shouldn&apos;t go to the staff member&apos;s office</description>
    <inlineHelpText>Only store the revenue allocation assignment here</inlineHelpText>
    <label>Revenue Allocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>