force-app/main/default/objects/Contact/fields/Riva_Contact_Sync__c.field-meta.xml
<CustomField>
    <fullName>Riva_Contact_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Riva Contact Sync</label>
    <type>Checkbox</type>
</CustomField>