force-app/main/default/objects/Contact/fields/Show_Photo__c.field-meta.xml
<CustomField>
    <fullName>Show_Photo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Photo</label>
    <type>Checkbox</type>
</CustomField>