force-app/main/default/objects/Contact/fields/Staff_Type__c.field-meta.xml
<CustomField>
    <fullName>Staff_Type__c</fullName>
    <label>Staff Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADMIN</fullName>
            </value>
            <value>
                <fullName>AG-TEMP</fullName>
            </value>
            <value>
                <fullName>CORP</fullName>
            </value>
            <value>
                <fullName>FIN</fullName>
            </value>
            <value>
                <fullName>HL-TEMP</fullName>
            </value>
            <value>
                <fullName>INTERN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>