force-app/main/default/objects/Contact/fields/STAFFID__c.field-meta.xml
<CustomField>
    <fullName>STAFFID__c</fullName>
    <description>STAFFID from HL_STAFF</description>
    <externalId>true</externalId>
    <label>STAFFID</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>